# ChangeLog for dev-tex/glossaries
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/glossaries/ChangeLog,v 1.68 2014/06/20 08:06:34 radhermit Exp $

*glossaries-4.07 (20 Jun 2014)

  20 Jun 2014; Tim Harder <radhermit@gentoo.org> +glossaries-4.07.ebuild:
  Version bump.

  17 May 2013; Alexis Ballier <aballier@gentoo.org> -glossaries-3.01.ebuild,
  -glossaries-3.02.ebuild, -glossaries-3.03.ebuild:
  remove old

  17 May 2013; Alexis Ballier <aballier@gentoo.org> glossaries-3.04.ebuild:
  bump texlive-latexextra dep to 2012, bug #458220 by Aaron Mavrinac (ezod)

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for sh, wrt bug #449926

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for s390, wrt bug #449926

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for alpha, wrt bug #449926

  13 Jan 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for x86, wrt bug #449926

  07 Jan 2013; Jeroen Roovers <jer@gentoo.org> glossaries-3.04.ebuild:
  Stable for HPPA (bug #449926).

  06 Jan 2013; Markus Meier <maekke@gentoo.org> glossaries-3.04.ebuild:
  arm stable, bug #449926

  05 Jan 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for sparc, wrt bug #449926

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for ia64, wrt bug #449926

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for ppc64, wrt bug #449926

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for ppc, wrt bug #449926

  03 Jan 2013; Agostino Sarubbo <ago@gentoo.org> glossaries-3.04.ebuild:
  Stable for amd64, wrt bug #449926

  24 Nov 2012; Tim Harder <radhermit@gentoo.org> glossaries-3.04.ebuild:
  Use gentoo mirror.

*glossaries-3.04 (24 Nov 2012)
