@@ -4,17 +4,17 @@ Hash: SHA256
 DIST glossaries-3.04.zip 3838009 SHA256 7597d2b61b2a253e562e6b16c33c8db09ea9bd940968d3e5ac96857503f30669 SHA512 1669c2288c31f1b1b79dc9776c55c2abfc8fd216482cf6175e9f788a2882cfe997ca13c9d93d317e4d31fcc9eba8dc977bc806874179654141ca7235ec7c3889 WHIRLPOOL 003016d2a2aaa8241d17464b74d902f228e2aad2730804af3e41075a5bbd176284a7f69ed95493fdd02842a502afde680be0e22b13b27740996563deaf35ba93
 DIST glossaries-4.07.zip 5009472 SHA256 156a625f51adec6524e67d49128fae7e009720b0616c6d73a36ac17c3b1f1b79 SHA512 576c52b0502e9854ac1332142a724ed1b97b37502322d52195f343f864a82e249529715b0a637f984ab01662d288f2ba57f7a932d2523435d5147dfb43145d61 WHIRLPOOL 7db0548b00a3e6544bc7c1a096b645f2f9fe492ca0adc4a5d5f49e42593348b930fad587e3877c769918840c21ae95ef7321becc29a36748d4f2f15a58f190a7
 EBUILD glossaries-3.04.ebuild 1118 SHA256 0fe7ec732e505e0ccda71bab50dd3a33e421b3625cad122d55832388f629fd7e SHA512 96151988780d182dd6716dda12fa6809c67c8960ea55d46dd15d048cf08507d0ae40168e53c31b438c0885347946b25d60da038d8f24e731c254df4c87fa23ca WHIRLPOOL f93ff6078240a0f5cddea56de5aad63f4e11dd5c647b0ea2e722cef2f7f4e1cdd9440dd1ce7499403640eac02ef8f9644640de9d09868a481f936a7671ec4cba
-EBUILD glossaries-4.07.ebuild 1096 SHA256 dce1fd727a82b2820a0ce9a1f542d034b705f5b1106c3f2c414cdd737a183391 SHA512 8ddbf765dc7b5e1b08a1dcc4e7f293c19438cf290f5f352622b9771a632a5398cb144b852e0723d117b4d15d3fdbd9460719e23e2d61cb26af35d2eb4abfff22 WHIRLPOOL 29af1a0258c485fb48b11ee447ba6a6c51b2a7c6597d2d37152b3ffbca35487c77721d9d956f05ac62e829ba92f58eea6f948c55ae357d469a146ad4a3b8013b
-MISC ChangeLog 8553 SHA256 31819511aa7a6d898a6c3c932b97dd748997baaaa594c9b83ff3c2b5e3bfa2f8 SHA512 7aa6714cd998954c7f61919eb871886d8b5b4fc580c832cc84b9c3913d1bb0faf3d752b372a8389920001b2a379c04c70753a220241b18220432ec62d06dd77c WHIRLPOOL ccb52e57d4bc569f79e6265b3c0e37293d7fccf44013cd0c553250d8d596c72bf11ca32fb2ee877bcdb81cc827b071362c674dd4737355aac4d0c950a9729dca
+EBUILD glossaries-4.07.ebuild 1061 SHA256 12b68be8b1ae74e7ab0a0e8b620d24f83fa30c7d6a22347131b8da5f8b240f0f SHA512 b36384b96464ab4017637f5a8239d0a9d1ae1ca8c041dc62393af43b8997d1d3ea7f1c6751d8870882050cd6305c8fe1a9da0862f2f08ef2d5b1fc71ce4c9c26 WHIRLPOOL 8cea6dcf24f6a7060a309f5a68053d4100d3318676ddafd0959d59cf30a06c36fa14ae3ce4598ae8e860a1ac2250909dda560a66848c91eb56d4e60492a36ae8
+MISC ChangeLog 8643 SHA256 d24919fdc4564c86b2bb88acc0f374f3ca1fcccb70b8ee95114a40e138ab8cf2 SHA512 7b1c88680f83a074606b4a2cae91668fbf50120b32ed3d78c6e91e772e6b6676fb907416e0a01d1dc6329fe9dbc417fadf1edc652f93f0c06b8419c97fc167c1 WHIRLPOOL 38daef027b141f82cc6be151afe984339bb9df671875b69a3ba63833f38217de95773a1179997a8109d9d55ea2882b93336e39a9a098b322c8cccd822277e488
 MISC metadata.xml 158 SHA256 ffac3130a9f8a11faf7d20a52ec5ef00e96d2f05e2fc98cceefdfbb9f280b8c7 SHA512 d638df9e36aa7911fef6e415f148121d6ad1d037a577c85030a12b7b9935c7735bc4abb036209fc6b0983f93f80e5729e8e3967f6a60368cc863108771f72763 WHIRLPOOL 7023db4ee3de79ad7a4e189c31004ef3c6c7a237799bd0c658d2ab96a256bf1a4dd674639ed75948141e1469fc02c8eb99edc8a1d914816548f8b26a7bce8cbd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTo+uLAAoJEEqz6FtPBkyjyCkH/2gschS1URAXCVgvfcXHovzf
-wVo28nhwTbFeC2lpvaOwkQPQP6lQHU/47ykpCQEWZdfbz7zfXn9qefxJ1cOx5ej+
-RQkrwG5dZdB9pOEaOGRcXxbV2StPVE93Xp61jUdV2b/mobm6ULLzmH0MCvdihsNH
-bcoCq8sUj4YLtrjVLwg/l4H3DvPSvVpQjVRd6Zl0htEVRCGFpGJhq8qHOeG3h3mG
-U2MX8wFmShOf/SGRCDqtfuDC6UBxVjZ7eKB+4mM/df7DR47d6EU4QPD71IzRVb9Z
-G7c8q3k9P4dpxYVQcBParJQqPGNT2+NNSYFW5mvla3UdnpSqwPjw6IY/uE1u+DI=
-=739c
+iQEcBAEBCAAGBQJTtlJdAAoJEEqz6FtPBkyjV1oIAJk/SCjOmFcCZ4gB5dqlmB46
+IKL2RRf24uNaxgrmvUVAO3s/E/vg80VX8WlslpzzwnyzL4e/YO3WhSF8CLzLUGJQ
+kZDnVlDC4Iw+8RkYMbG2ZWD0M7k9mFNndPFMQwT0pBiTaxeT36sg3C79EOdL8bpC
+VOXNqeH9NHIc3olDaZtZ5KR17SPUBJlxgUuVDIMlRXPPfLt6/UcJPyGZoPl39Nqv
+6OlMgX0hcsB8NcTSas3YzgvYlKBrANDPauSKk3CskuDpjOWI9MAbogeg3ruDgULR
+D1dHLWccEUPJw0HLnQB3cnyarVjP3U85lMWMPqnvrzyIo1THh4eSEwPQ9gRiCxY=
+=EsWi
 -----END PGP SIGNATURE-----
