@@ -1,13 +1,13 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/glossaries/glossaries-4.07.ebuild,v 1.1 2014/06/20 08:06:34 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/glossaries/glossaries-4.07.ebuild,v 1.2 2014/07/04 07:06:04 radhermit Exp $
 
 EAPI=5
 
 inherit latex-package
 
 DESCRIPTION="Create glossaries and lists of acronyms."
-HOMEPAGE="http://www.ctan.org/tex-archive/help/Catalogue/entries/glossaries.html"
+HOMEPAGE="http://www.ctan.org/pkg/glossaries/"
 SRC_URI="http://dev.gentoo.org/~radhermit/dist/${P}.zip"
 
 LICENSE="LPPL-1.2"
