@@ -7,20 +7,22 @@ AUX lilypond-2.17.2-tex-docs.patch 608 SHA256 ca43b5633f3ee85748d5f0f43814b144ec
 DIST lilypond-2.16.2.tar.gz 16062982 SHA256 1f4326cf8f9363076a83ce3cbe35f747188084f7492000ed3a7ccc3ce60aa1cb SHA512 3ead74ddb7e51be274aa5aa607b776261ae5d0e9863ebe745451875e62a60fac2376f7e80546df66010cdec2752c271e7006275608f30ce9a2d1b88f22dc1d8d WHIRLPOOL a25539dac5e508220e1ddeeaed261b730e76fd26c5dbc0f97683b65bcbc5907ef6bfbe8c16a7f6a15d12950d4a7d547ee1716e25cdfb5b750e235c913a8ef38e
 DIST lilypond-2.18.2.tar.gz 16027977 SHA256 329d733765b0ba7be1878ae3f457dbbb875cc2840d2b75af4afc48c9454fba07 SHA512 0692f6eb41733076ba7f610cd1e65762f4dfd67307e2ab9e222b140d58ae3a1bb1c6b3be3bcff778d57f161868cf6d57e99bf43bf20f2663d042a07493942ec6 WHIRLPOOL 95db264992a1e425fd1ee53d980941eef554c1784a1adfc105750d82d11664f61207c2b1897b6e99448790131c0715f08401f45b663c420553925596c6fd4b1c
 DIST lilypond-2.19.8.tar.gz 16046971 SHA256 9796cea12a8a603d7bdf045b5997874774548017c3baa68094fc5f28007f3e14 SHA512 6b8499e8a98f5bdba93b3c1c35144b6dbd945dc068d77d5cd94d0d8540f956348100a8b5a66355b73c328774a6a8a2dc713dc66a42d93c5e0c21be39d84c389d WHIRLPOOL 2c2ec4f29e17b60106152dca96a1b85aa3c6d79719212da1d77d742812c4fc51f64dbb921001dd782ce7f45ea6dfd5011fbd94ac764ac64640c2bfa7a81f266f
+DIST lilypond-2.19.9.tar.gz 16310478 SHA256 3efb4d719749184e577d6af6ff6d7b9c0376ccd7edce100e12bd6a2184c44eca SHA512 15316fa72855d612d2e8a8d9b9fad5656fc8446bcb4337c83acb2030957b4232a57c4c0025232c726bb9a483fb4963e6b1560d418bcfbb80a1aa222aa32e1f8c WHIRLPOOL ad7f2066f28f078613860f3b965fae018c8343a8c60f32d7c9f2f7cdb512d403932943241fbe2a137aae92c7f8cfeb4a9b975e301044527d4d39e962fc413a07
 EBUILD lilypond-2.16.2.ebuild 2560 SHA256 2e8712a0e9255175019eccbe036b9d59b66adffb2dac72e449208342d5b76928 SHA512 ab5adb4f15cfb188ea50ef2bb9c2b04de5591e143e5787ec0f2f74268008c67a4dc4b3afcb4435df3fb033b5635fa37a1e55c234234dabaf65ba30dbfd93c176 WHIRLPOOL d1096e66c7cc0d154edfc82bccb1393aaae42dc0257317ba99b5d50ab03babf5e4ec1ec6574b136b78bcf138e4e12b5299cd7ac3995062c7bde3b026b5620c1f
 EBUILD lilypond-2.18.2.ebuild 3099 SHA256 38603af45a26486392db55aa2e67b67a0794405c90f9c9bd0f07cfdb4b81193d SHA512 671043f2e3004d15b7d069148403176129e4fbd3d8aeb855bf1a20fab6dc1b2e2e825a171727eb50c686146b7155978b5f239213064f26f462fccf3af0edf021 WHIRLPOOL 7b6a176a68c3678f419beeb7561d7a067939706e81dff1b61705739f561bd48e7f7e95c0a8c03c263595cc3cea052e90b414c4483080c06d3134a96cb355bf1a
 EBUILD lilypond-2.19.8.ebuild 3064 SHA256 40593a30aa838f290609de59fe23579ae83a4836c819bb2d9fc52d42f7cb3577 SHA512 4b22756ab188d098f238d6a701f50d20a19cc0d3e1bc9f28b8382d03bc2a035c8706643734c6cf496643001e49bdee0609078f3df0fbb5d5e6fa2b071b752fba WHIRLPOOL b9796e5934557eb34c7d9d80a874db888d1e521b431273da2d660a2b22a0445ed0a177da313c3643edb52096fe73c5f442da9badc9c4b008afc1c0e257d29188
+EBUILD lilypond-2.19.9.ebuild 3064 SHA256 3a5b26cdc1150f35da3eed3a5f2cb4b8dc340c5bfc229c3734e2c838f90a36a9 SHA512 9eb238647621a5102faa40788ba8d719cdbe6f3e3476f9a3f8ecf0918733f27a078f1fafaa48be2f735a858587fd6928dc198bf168f992b0f2027049978ff672 WHIRLPOOL 5792e50dc8b55697cd86d17822991525123f73bfab8031345566641c8ebc755d8aa92b95463b9cbc722e6b591abe445217887c89d95129f635f40385f059480b
 EBUILD lilypond-9999.ebuild 2973 SHA256 cf345bee1a11770240b1134cddc19bc9013fd3653e485034112fdd10dda92ba7 SHA512 d457399d64596a2171a0b68fd74d231e59467c4e0feb799e4da75985184fff4fac93127af6dbcd4273d041821728e7d8462643031322cfb43c11addbec9f5626 WHIRLPOOL e771c3caf7c8b5b19ef8e1fd986d011a4bbb0109cdf3bc552d51c10735fde64b04553cb7621c6ab1de25febcd20479ce0be433e465425fe55db567c053094b07
-MISC ChangeLog 28975 SHA256 88d6e3a74c938198b4d2a510c96bed7b2e460575125692bb4c05942137991e5b SHA512 eb7ef86894707461e339ed4bef13eac33e9655f5d97852e8a1dd0d6d236c2bcc7e640edb5114a53798eea84afbc7a0e71af07a0d4522d5f67e3b83aca5bd5188 WHIRLPOOL 3af022f71d7193e0d6303e3efb97ec3042d3d69ff27afa710af62eeba1ce83d6964f02d6e07f35e25f5d8226a7bfd83c437b5a7af72e8d0e4ee067a7ff0500e7
+MISC ChangeLog 29098 SHA256 377753855650ee4b68deb6145c491c55b7c02619cff0ddb5581b51062151203d SHA512 572569c6fb036c34fdb1def55aa0a7f0aeb908d9d2c7d20ca919dd2ad75f60d8aa3efe0180e403cf9c19f0e74b37859b8f9dd6cf39d6f59253aba8fd9d723d61 WHIRLPOOL cd381cf34bdc79393220342fe7fb79297131def5e0002ae103e8eb7b63d2312f65e5800cc79f49f709e7326b1707dcca770b59e8f5c76afe7665ab93591e02de
 MISC metadata.xml 534 SHA256 9d9d5dba892fde9a346843a9cacaeac7ce9236f643d1c0f778333cc65181a025 SHA512 711b4d7ff31d686c01cc9f67bbd84bd69da5a955e60a759b814a9379d20079061d019a53da9906a75a4a408654307406eef99129655fb38a21953eaf209215e1 WHIRLPOOL 87cddb2db014ae47a3e2408fb696fcce7118632a8574d0b8be21ef603d3ecdc4714f2736a7a3388fc907e6b2b984feabca1f77b603e34ff1477920260cb696b4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTplm/AAoJEEqz6FtPBkyj25sH/A0ArBOXto/Ra41SmQWVLJcG
-MQJpLcKwLL/Ttw003psrmYItQ/XNDnInBc1ronqre34wSxCE+StgcTMB3+BB7iDX
-h4WJErXoQ3l9Y3oZL9LMenCRB4Bbfmk8FcZzW10jAF6afGCuGbDUj5VNJytDtPBJ
-6/eGoVqLPVvtuKxM6qZtzoUa6jODn/QhdrvUj8EFCYQJltDH9MKEKw3z1nRO3/yB
-c9ypwVDou6KgFcwyD57PVSGobUJoPXuiVvWLm9eiS2Z1GKnme5rLpbxYV21vKvXR
-eNch5Dzm86GUuo2iku34Xg+kT8IL+AHzwRrzmW8hmzVrUXC5xlYVElfE5RrkPfw=
-=L7t3
+iQEcBAEBCAAGBQJTtlFUAAoJEEqz6FtPBkyjj74H/1Y3ZZh8k2Xco7e2XiTFKn6H
+ss9ac7AP/Awk+7wjRTjpBFAN5OV6Og4/tQ7ml0/Rp9NxbwJuZnWu0yT7ihBbEM5o
++k90LLGwi9Aw7BSMP0ub/OXWokDlaoaMkndtvdyQoHCTfqDgKsElotcCjbRQDehx
+C22IB2NOXkc5rbqSlc6EeNxIMhD/L2GU1Ly/HdhZu0hsd+Tx9RCpJ3zlVEm/i8nN
+x/6DsUZ3TOmw6opXZUBBd+rgf1ZfsSOcZg+WknEnASKr3BpHaSZdsmx/1m+07v8i
+uFIOQ1oxxO3QEHzvHgb65hMHl660YLQEfEubTtqnDoOzJdjqcujqiMm5gQ4Gi0g=
+=k72Q
 -----END PGP SIGNATURE-----
