@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup
+DEPEND=>=app-text/ghostscript-gpl-8.15 >=dev-scheme/guile-1.8.2[deprecated,regex] media-fonts/urw-fonts media-libs/fontconfig media-libs/freetype:2 >=x11-libs/pango-1.12.3 emacs? ( virtual/emacs ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] app-text/t1utils dev-lang/perl || ( ( >=dev-texlive/texlive-metapost-2013 >=dev-tex/metapost-1.803 ) <dev-texlive/texlive-metapost-2013 ) virtual/pkgconfig media-gfx/fontforge >=sys-apps/texinfo-4.11 >=sys-devel/bison-2.0 sys-devel/flex sys-devel/gettext sys-devel/make !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=GNU Music Typesetter
+EAPI=5
+HOMEPAGE=http://lilypond.org/
+IUSE=debug emacs profile vim-syntax linguas_ca linguas_cs linguas_da linguas_de linguas_el linguas_eo linguas_es linguas_fi linguas_fr linguas_it linguas_ja linguas_nl linguas_ru linguas_sv linguas_tr linguas_uk linguas_vi linguas_zh_TW python_targets_python2_7 python_single_target_python2_7
+KEYWORDS=~amd64 ~hppa ~x86
+LICENSE=GPL-3 FDL-1.3
+RDEPEND=>=app-text/ghostscript-gpl-8.15 >=dev-scheme/guile-1.8.2[deprecated,regex] media-fonts/urw-fonts media-libs/fontconfig media-libs/freetype:2 >=x11-libs/pango-1.12.3 emacs? ( virtual/emacs ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?]
+REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_7 )
+RESTRICT=test
+SLOT=0
+SRC_URI=http://download.linuxaudio.org/lilypond/sources/v2.19/lilypond-2.19.9.tar.gz
+_eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	elisp-common	1aa23b3de5dae55456fa2071428eb5bf	eutils	025442f2eecab39ad0b4e541b6e142af	libtool	2964b38e7ad7f6998406386ad1c6dbcf	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	555f707a94c14486f51cba70cc55b62c	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=91026ad3f31801f0d2ac92d1f141a032
