@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/amd64/package.use.stable.mask,v 1.39 2014/07/03 18:51:26 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/amd64/package.use.stable.mask,v 1.41 2014/07/04 07:28:14 pacho Exp $
 
 # When you add an entry to the top of this file, add your name, the date, and
 # an explanation of why something is getting masked. Please be extremely
@@ -168,6 +168,7 @@ media-libs/gstreamer abi_x86_32
 media-libs/harfbuzz abi_x86_32
 media-libs/ilmbase abi_x86_32
 media-libs/imlib abi_x86_32
+media-libs/imlib2 abi_x86_32
 media-libs/jbigkit abi_x86_32
 media-libs/jpeg abi_x86_32
 media-libs/ladspa-sdk abi_x86_32
@@ -176,6 +177,7 @@ media-libs/libaacplus abi_x86_32
 media-libs/libao abi_x86_32
 media-libs/libass abi_x86_32
 media-libs/libart_lgpl abi_x86_32
+media-libs/libcaca abi_x86_32
 media-libs/libcddb abi_x86_32
 media-libs/libcuefile abi_x86_32
 media-libs/libdc1394 abi_x86_32
