@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9131 2014/07/03 21:52:42 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9132 2014/07/04 07:29:31 pacho Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  04 Jul 2014; Pacho Ramos <pacho@gentoo.org> arch/arm/package.use.mask:
+  Update arm mask
 
   03 Jul 2014; Michał Górny <mgorny@gentoo.org> package.mask:
   Unmask the last multilib fun-pack.
