@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/glossaries
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/glossaries/ChangeLog,v 1.68 2014/06/20 08:06:34 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/glossaries/ChangeLog,v 1.69 2014/07/04 07:06:04 radhermit Exp $
+
+  04 Jul 2014; Tim Harder <radhermit@gentoo.org> glossaries-4.07.ebuild:
+  Fix HOMEPAGE.
 
 *glossaries-4.07 (20 Jun 2014)
 
